Fix Tools link for mobile view When you click on Tools tab on mobile, instant opens a Tools page instead of showing dropdown menu. This fix removes link on mobile view.

--- a/index.css
+++ b/index.css
@@ -282,14 +282,14 @@ ul {
     justify-content: center;
     order: -1;
   }
+  #txt {
+    display: inline-block;
+    margin-right: 2em;
+    padding: 1em;
+    align-self: center;
+  }
   @media only screen and (max-width: 1165px) {
-      footer {
-        font-size: x-small;
-      }
-      ul a {
-        font-size: small;
-      }
-      .dropbtn {
+      ul a, .dropbtn, footer {
         font-size: small;
       }
       .card {
